# haskell-lectures

./: README.md  lectures.cabal  stack.yaml
app/: Main.hs
src/: ScndLecture.hs
src/Lectures/: CTNotes.md  EighthLecture.hs  ElvnthLecture.hs  FfthLecture.hs  FrthLecture.hs  Lecture_01.md  Lecture_02.hs  Lecture_04.hs  Lecture_05.hs  Lecture_07.hs  Lecture_08.hs  Lecture_09.hs  Lecture_10.hs  Lecture_11.hs  NnthLecture.hs  ScndLecture.hs  SvnthLecture.hs  SxthLecture.md  TnthLecture.hs
src/Practice/: ElvnthPractice.hs  FrthPractice.hs  Practice_04.hs  Practice_06.hs  Practice_10.hs  Practice_11.hs  SxthPractice.hs  TnthPractice.hs
test/: Test.hs
