cabal-version:      3.0
name:               lectures
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/lenchevskii/ru-haskell-lectures#readme>

extra-source-files: README.md

common language
  build-depends:    base
  default-language: Haskell2010

library
  import:          language
  exposed-modules:
    Lectures.FfthLecture
    Lectures.FrthLecture
    Lectures.ScndLecture
    Practice.SxthPractice

  build-depends:   optparse-applicative
  hs-source-dirs:  src

executable lectures
  import:         language
  main-is:        Main.hs
  build-depends:
    , lectures
    , optparse-applicative

  hs-source-dirs: app

test-suite tests
  import:         language
  build-depends:
    , lectures
    , tasty
    , tasty-hunit

  main-is:        Test.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
