cabal-version:      3.6
name:               lectures
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/lenchevskii/haskell-lectures#readme>

extra-source-files: README.md

common language
  build-depends:
    , base
    , random
    , vector

  default-language: Haskell2010

library
  import:          language
  exposed-modules:
    Lectures.Lecture_02
    Lectures.Lecture_04
    Lectures.Lecture_05
    Lectures.Lecture_07
    Lectures.Lecture_08
    Lectures.Lecture_09
    Lectures.Lecture_10
    Lectures.Lecture_11
    Practice.Practice_06

  build-depends:   optparse-applicative
  hs-source-dirs:  src

executable lectures
  import:         language
  main-is:        Main.hs
  build-depends:
    , lectures
    , optparse-applicative

  hs-source-dirs: app src

-- executable clasters
--   import:        language
--   main-is:       Main.hs
--   build-depends:
--     , random
--     , vector
--   hs-source-dirs: clasters

test-suite tests
  import:         language
  build-depends:
    , lectures
    , tasty
    , tasty-hunit

  main-is:        Test.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
